# bevy_graduation_project

./: .gitignore  Cargo.toml  README.md
bevy/: Cargo.toml
bevy/physics/: Cargo.toml
bevy/physics/src/: main.rs  plugin.rs  systems.rs
bevy/physics_client/: Cargo.toml
bevy/physics_client/src/: main.rs  plugin.rs  systems.rs
bevy/physics_server/: Cargo.toml
bevy/physics_server/src/: main.rs
bevy/physics_shared/: Cargo.toml
bevy/physics_shared/src/: lib.rs
client/: Cargo.toml
client/src/: client.rs  error.rs  main.rs  plugin.rs  systems.rs
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs  serializable.rs
src/: main.rs  plugin.rs
