[package]
name = "bevy_graduation_project"
version = "0.1.0"
edition = "2021"
authors = ["Alihan Çelikcan", "Harun Erkurt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "*"
bevy_rapier3d = "*"
bevy_flycam = "0.9.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3