[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["jpeg"] }
bevy_rapier3d.workspace = true

tracing.workspace = true
bincode.workspace = true
human_bytes.workspace = true
clap.workspace = true
tungstenite.workspace = true

url = "*"
color_space = "*"

shared = { path = "../shared" }
